# Erin

./: .appveyor.yml  .coveragerc  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  DESCRIPTION.rst  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ci/: appveyor-bootstrap.py  appveyor-download.py
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst
docs/api/: enigma.commands.rst  enigma.core.database.rst  enigma.core.rst  enigma.rst  erin.cli.rst  erin.core.database.rst  erin.core.rst  erin.db.drivers.rst  erin.db.rst  erin.rst  glia.cli.rst  glia.core.database.rst  glia.core.rst  glia.db.drivers.rst  glia.db.rst  glia.rst  modules.rst
docs/handbook/: basics.rst  index.rst  introduction.rst  plugins.rst
docs/installation/: bot.rst  database.rst  index.rst
docs/manual/: index.rst  usage.rst
enigma/: __init__.py  __main__.py  app.py  client.py  dashboard.py  utils.py
enigma/cli/: start.py
enigma/commands/: __init__.py  start.py
enigma/core/: client.py  database.py  exceptions.py  loggers.py  utils.py
enigma/core/database/: __init__.py  public.py  queries.py
erin/: __init__.py  __main__.py  app.py  client.py
erin/cli/: __init__.py  scaffold.py  start.py
erin/core/: constants.py  exceptions.py  loggers.py  schema.py  utils.py
erin/core/database/: public.py
erin/db/drivers/: mongo.py
glia/: __init__.py  __main__.py  app.py  client.py
glia/cli/: scaffold.py  start.py
glia/core/: constants.py  exceptions.py  loggers.py  schema.py  utils.py
glia/core/database/: __init__.py  public.py
glia/database/drivers/: mongo.py  postgres.py
glia/db/: abc.py
glia/db/drivers/: mongo.py  postgres.py
plugins/Core/Error/: command_error_handler.py
plugins/Core/Navigation/: help.py
plugins/Core/Startup/: login.py
plugins/Development/: load_data.py
plugins/Roles/: role_persist.py
plugins/Unethical Judicial System/: member_info.py  reputation.py
plugins/Utilities/: tags.py
plugins/core/: __init__.py
plugins/core/error/: command_error_handler.py  plugin.cfg
plugins/core/navigation/: __init__.py  help.py  plugin.cfg
plugins/core/startup/: login.py
plugins/maintainance/: __init__.py  server_status.py
plugins/roles/: __init__.py  role_persist.py
plugins/utilities/: __init__.py  tags.py
tests/: test_configs.py  test_main.py  test_plugins.py
tests/fake_plugins/broken/: broken_extension.py
tests/fake_plugins/core/: __init__.py
tests/fake_plugins/core/error/: command_error_handler.py
tests/fake_plugins/core/navigation/: __init__.py  help.py  paginator.py
tests/fake_plugins/core/startup/: login.py
tests/fake_plugins/schema/: __init__.py  schema_extension.py
