[metadata]
name = Glia
description = Fully Fledged Discord Bot Framework
author = Glia Contributors
author-email = admin@discord.cx
license = apache
license_file = LICENSE
url = https://github.com/DiscordFederation/Glia
long-description = file: DESCRIPTION.rst
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Chat

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
