[metadata]
name = Erin
version = attr: erin.__version__
description = Fully Fledged Discord Bot Framework
author = Erin Contributors
author-email = admin@discord.cx
license = apache
license_file = LICENSE
url = https://github.com/DiscordFederation/Erin
long-description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Chat

[options]
packages = find:
python_requires = >=3.6
install_requires =
    toml
    motor
    discord.py @ git+https://github.com/Rapptz/discord.py.git@rewrite#egg=discord.py
    verboselogs
    cookiecutter
    schema
setup_requires =
    verboselogs

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
tests =
    pytest
    pytest-cov
    pytest-runner
    tox
voice =
    PyNaCl==1.2.1

[options.packages.find]
include =
    erin
    erin.*

[options.entry_points]
console_scripts =
    erin=erin.__main__:main

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
